--- a/app/src/main/res/layout/item_organization.xml
+++ b/app/src/main/res/layout/item_organization.xml
@@ -44,13 +44,15 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:textSize="16sp"/>
+                    android:textSize="18sp"/>
 
                 <TextView
                     android:id="@+id/infos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/tertiaryText"/>
+                    android:padding="2dp"
+                    android:textColor="@color/tertiaryText"
+                    android:textSize="13sp"/>
 
             </LinearLayout>
 
