Edit user base created.

--- a/app/src/main/res/layout/fragment_edit_user.xml
+++ b/app/src/main/res/layout/fragment_edit_user.xml
@@ -22,7 +22,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/create_opportunity_form"
+            android:id="@+id/edit_user_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -32,41 +32,35 @@
             android:paddingTop="@dimen/activity_vertical_margin">
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/titleInputLayout"
+                android:id="@+id/nameInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/title"
+                    android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/title"
+                    android:hint="@string/name"
                     android:maxLines="1"/>
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/descriptionInputLayout"
+                android:id="@+id/aboutInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/description"
+                    android:id="@+id/about"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="top"
-                    android:hint="@string/description"
+                    android:hint="@string/about"
                     android:inputType="textMultiLine"
                     android:lines="4"
                     android:maxLines="4"/>
 
             </android.support.design.widget.TextInputLayout>
-
-            <com.satsuware.usefulviews.LabelledSpinner
-                android:id="@+id/contactSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                ls:labelText="@string/contact"/>
 
             <LinearLayout
                 android:id="@+id/causesWrapper"
@@ -125,60 +119,60 @@
             </LinearLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/volunteersNumberInputLayout"
+                android:id="@+id/sizeInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/volunteersNumber"
+                    android:id="@+id/size"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/volunteers_number"
+                    android:hint="@string/size"
                     android:inputType="number"
                     android:maxLines="1"/>
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/timeCommitmentInputLayout"
+                android:id="@+id/cnpjInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/timeCommitment"
+                    android:id="@+id/cnpj"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/time_commitment"
+                    android:hint="@string/cnpj"
+                    android:inputType="number"
+                    android:maxLines="1"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/missionInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/mission"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/mission"
                     android:inputType="text"
                     android:maxLines="1"/>
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/othersRequirementsInputLayout"
+                android:id="@+id/occupationInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/othersRequirements"
+                    android:id="@+id/occupation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/others_requirements"
-                    android:inputType="text"
-                    android:maxLines="1"/>
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/tagsInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/tags"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/tags"
+                    android:hint="@string/occupation"
                     android:inputType="text"
                     android:maxLines="1"/>
 
@@ -193,7 +187,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/causes"/>
+                    android:text="@string/images"/>
 
                 <TextView
                     android:id="@+id/imagesError"
@@ -212,29 +206,71 @@
 
             </LinearLayout>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/gender"/>
 
             <RadioGroup
-                android:id="@+id/locationTypeGroup"
+                android:id="@+id/genderTypeGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <RadioButton
-                    android:id="@+id/isLocation"
+                    android:id="@+id/male"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:checked="true"
-                    android:text="@string/location"/>
+                    android:text="@string/male"/>
 
                 <RadioButton
-                    android:id="@+id/isVirtual"
+                    android:id="@+id/gemale"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/virtual"/>
+                    android:text="@string/female"/>
 
             </RadioGroup>
+
+            <LinearLayout
+                android:id="@+id/contactsWrapper"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/contacts"/>
+
+                <TextView
+                    android:id="@+id/contactsError"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/skills"
+                    android:textColor="@color/red"
+                    android:textSize="12sp"
+                    android:visibility="gone"/>
+
+            </LinearLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/siteInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/site"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/site"
+                    android:inputType="text"
+                    android:maxLines="1"/>
+
+            </android.support.design.widget.TextInputLayout>
+
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/locationInputLayout"
@@ -251,119 +287,39 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <RadioGroup
-                android:id="@+id/timeTypeGroup"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/birthAtInputLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
-                <RadioButton
-                    android:id="@+id/isDated"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:checked="true"
-                    android:text="@string/dated"/>
-
-                <RadioButton
-                    android:id="@+id/isOngoing"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/ongoing"/>
-
-            </RadioGroup>
-
-            <LinearLayout
-                android:id="@+id/dateWrapper"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
+                <EditText
+                    android:id="@+id/birthAt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:hint="@string/birth_at"
+                    android:inputType="date"
+                    android:maxLines="1"
+                    android:text="@string/date"
+                    android:textColor="@color/tertiaryText"/>
 
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/startDateAtInputLayout"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2">
+            </android.support.design.widget.TextInputLayout>
 
-                        <EditText
-                            android:id="@+id/startDateAt"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/from"
-                            android:inputType="date"
-                            android:maxLines="1"
-                            android:text="@string/date"
-                            android:textColor="@color/tertiaryText"/>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/establishedAtInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                    </android.support.design.widget.TextInputLayout>
-
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/startTimeAtInputLayout"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                        <EditText
-                            android:id="@+id/startTimeAt"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:maxLines="1"
-                            android:text="@string/time"
-                            android:textColor="@color/tertiaryText"/>
-
-                    </android.support.design.widget.TextInputLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
+                <EditText
+                    android:id="@+id/establishedAt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:hint="@string/birth_at"
+                    android:inputType="date"
+                    android:maxLines="1"
+                    android:text="@string/date"
+                    android:textColor="@color/tertiaryText"/>
 
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/endDateAtInputLayout"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2">
-
-                        <EditText
-                            android:id="@+id/endDateAt"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/to"
-                            android:inputType="date"
-                            android:maxLines="1"
-                            android:text="@string/date"
-                            android:textColor="@color/tertiaryText"/>
-
-                    </android.support.design.widget.TextInputLayout>
-
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/endTimeAtInputLayout"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                        <EditText
-                            android:id="@+id/endTimeAt"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="text"
-                            android:maxLines="1"
-                            android:text="@string/time"
-                            android:textColor="@color/tertiaryText"/>
-
-                    </android.support.design.widget.TextInputLayout>
-
-                </LinearLayout>
-            </LinearLayout>
+            </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
     </ScrollView>
