--- a/app/src/main/res/layout/fragment_volunteer_completion.xml
+++ b/app/src/main/res/layout/fragment_volunteer_completion.xml
@@ -38,7 +38,7 @@
                     android:id="@+id/about"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_about"
+                    android:hint="@string/about"
                     android:inputType="textCapSentences"
                     android:maxLines="1"/>
 
@@ -52,7 +52,7 @@
                     android:id="@+id/occupation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_occupation"
+                    android:hint="@string/occupation"
                     android:imeActionId="@+id/save"
                     android:imeActionLabel="@string/action_save"
                     android:imeOptions="actionUnspecified"
