--- a/app/src/main/res/layout/fragment_dialog_create_contact.xml
+++ b/app/src/main/res/layout/fragment_dialog_create_contact.xml
@@ -29,7 +29,7 @@
                     android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_name"
+                    android:hint="@string/name"
                     android:inputType="textPersonName"
                     android:maxLines="1"/>
 
