--- a/app/src/main/res/layout/item_opportunity_items.xml
+++ b/app/src/main/res/layout/item_opportunity_items.xml
@@ -4,6 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
+    android:minWidth="80dp"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -14,7 +15,7 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center"/>
