ProfileImage. Other things. Long day!

--- a/app/src/main/res/layout/fragment_dialog_create_contact.xml
+++ b/app/src/main/res/layout/fragment_dialog_create_contact.xml
@@ -57,7 +57,7 @@
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_email"
+                    android:hint="@string/email"
                     android:imeActionId="@+id/save"
                     android:imeActionLabel="@string/action_save"
                     android:imeOptions="actionUnspecified"
